--- a/Track-order.html
+++ b/Track-order.html
@@ -7,9 +7,31 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
         <link rel="stylesheet" href="css/track-ordr.css">
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
+        <header class="header">
+            <div>
+                <a class="navbar-brand" href="#">LOGO</a>
+            </div>
+            <div class="links">
+                <ul>
+                    <li>
+                      <a class="link-child" href="#"><i class="bi-person"></i><span class="link-off"> Login</span></a>
+                    </li>
+                    <li>
+                        <a class="link-child" href="#"><i class="bi-question-circle"></i><span class="link-off"> New To Shop</span></a>
+                    </li>
+                    <li>
+                        <a class="link-child" href="#"><i class="bi-cart3"></i><span class="link-off"> Cart</span></a>
+                    </li>
+                </ul>
+            </div>
+
+        </header>
         <div class="container mt-4 p-4 bg-white shawdow-sm">
             <div class="row">
                 <div class="col-lg-2 mobile circle-right position-relative">
