--- a/open-order-page.html
+++ b/open-order-page.html
@@ -8,8 +8,60 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <link rel="stylesheet" href="css/order-page.css">
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     </head>
     <body>
+        <header class="header">
+            <div>
+                <button class="header-btn" id="btn-nav" type="button">
+                    <i class="bi-list"></i>
+                </button>
+                <a class="navbar-brand" href="#">LOGO</a>
+            </div>
+            <div class="links">
+                <ul>
+                    <li>
+                      <a class="link-child" href="#"><i class="bi-person"></i><span class="link-off"> Login</span></a>
+                    </li>
+                    <li>
+                        <a class="link-child" href="#"><i class="bi-question-circle"></i><span class="link-off"> New To Shop</span></a>
+                    </li>
+                    <li>
+                        <a class="link-child" href="#"><i class="bi-cart3"></i><span class="link-off"> Cart</span></a>
+                    </li>
+                </ul>
+            </div>
+
+        </header>
+        <nav class="nav">
+            <div class="nav-links" id="side-cat">
+                <a class="navbar-brand slide-logo" href="#" style="margin-left: 10%;">LOGO</a>
+                <button class="cancel" id="cancel-btn" type="button">
+                    <i class="bi-x"></i>
+                </button>
+                <div class="categories-hide">
+                    <div class="scroll-div">
+                        <div class="scroll-object">
+                            <a href="#" class="category2"><i class="bi-tag"> </i><span class="category-text">&nbsp;My Account</span></a>
+                            <a href="#" class="category2"><i class="bi-tag"> </i><span class="category-text">&nbsp;My Account</span></a>
+                            <a href="#" class="category2"><i class="bi-tag"> </i><span class="category-text">&nbsp;My Account</span></a>
+                            <a href="#" class="category2"><i class="bi-tag"> </i><span class="category-text">&nbsp;My Account</span></a>
+                            <a href="#" class="category2"><i class="bi-tag"> </i><span class="category-text">&nbsp;My Account</span></a>
+                            <a href="#" class="category2"><i class="bi-tag"> </i><span class="category-text">&nbsp;My Account</span></a>
+                            <a href="#" class="category2"><i class="bi-tag"> </i><span class="category-text">&nbsp;My Account</span></a>
+                            <a href="#" class="category2"><i class="bi-tag"> </i><span class="category-text">&nbsp;My Account</span></a>
+                            <a href="#" class="category2"><i class="bi-tag"> </i><span class="category-text">&nbsp;My Account</span></a>
+                            <a href="#" class="category2"><i class="bi-tag"> </i><span class="category-text">&nbsp;My Account</span></a>
+                            <a href="#" class="category2"><i class="bi-tag"> </i><span class="category-text">&nbsp;My Account</span></a>
+                            <a href="#" class="category2"><i class="bi-tag"> </i><span class="category-text">&nbsp;My Account</span></a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="nav-overlay" id="side-overlay"></div>
+        </nav>
         <!-- parent container -->
         <div class="container">
 
@@ -17,7 +69,7 @@
             <div class="row justify-content-between">
 
                 <!-- aside nav-bar container -->
-                <div class="col-lg-3 pt-2">
+                <div class="col-lg-3 pt-2 turn-off">
 
                     <!-- aside nav-bar -->
                     <div class="col-lg-12 bg-white shawdow">
@@ -125,5 +177,9 @@
             <!-- /making it a row -->
         </div>
         <!-- /parent container -->
+        
+        <div id="footer"></div>
+        <script src="js/main.js"></script>
+        <script src="jquery/jqueryv3.4.1.js"></script>
     </body>
 </html>
