--- a/searchpage.html
+++ b/searchpage.html
@@ -473,6 +473,7 @@
         </div>
         <div class="nav-overlay" id="side-overlay"></div>
     </nav>
+    
     <div id="filterouter">
         <div id="filterinner">
             <div id="pricefilter">
@@ -500,6 +501,10 @@
             </div>
             <div id="sresult">
                 <div id="divofcards">
+                    <div class="search-bar">
+                        <input type="text" id="input-search" placeholder="Search Item">
+                        <div id="search-btn">Search</div>
+                    </div>
                     <div class="wholeline">
                         <div class="divof2">
                             <div class="cards">
