Navbar added to the pages

--- a/Track-order.html
+++ b/Track-order.html
@@ -34,22 +34,35 @@
         </header>
         <div class="container mt-4 p-4 bg-white shawdow-sm">
             <div class="row">
-                <div class="col-lg-2 mobile circle-right position-relative">
+                <div class="col-lg-2 mobile circle-center position-relative">
                     <div class="circle"></div>
+                    <div class="circle-text">
+                        <p class="deliv-time mt-2">20/2021</p>
+                        <p class="deliv-note">Goods Here In Your Area</p>
+                    </div>
                 </div>
                 <div class="col-lg-3 dash-contain mobile">
                     <div class="dashed-line"></div>
                 </div>
                 <div class="col-lg-2 mobile circle-center">
                     <div class="circle"></div>
+                    <div class="circle-text">
+                        <p class="deliv-time mt-2">20/2021</p>
+                        <p class="deliv-note">Goods Here In Your Area</p>
+                    </div>
                 </div>
                 <div class="col-lg-3 dash-contain mobile">
                     <div class="dashed-line"></div>
                 </div>
-                <div class="col-lg-2 mobile circle-left">
+                <div class="col-lg-2 mobile circle-center">
                     <div class="circle"></div>
+                    <div class="circle-text">
+                        <p class="deliv-time mt-2">20/2021</p>
+                        <p class="deliv-note">Goods Here In Your Area</p>
+                    </div>
                 </div>
             </div>
         </div>
+        <div id="footer"></div>
     </body>
 </html>
