--- a/elevatezoom-master/project.html
+++ b/elevatezoom-master/project.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../css/main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <script src="https://kit.fontawesome.com/fa0bcfb368.js" crossorigin="anonymous"></script>
     <script src="./js/script.js"></script>
     <script src='jquery-1.8.3.min.js'></script>
@@ -98,12 +102,8 @@
             color: white;
         }
         #navdiv{
-            height: 70px;
-            width: 100%;
-            background-color: rgba(255, 255, 255, 0.781);
             margin-bottom: 2%;
             position: sticky;
-            top: 0;
         }
         #productdet{
             background-color: white;
@@ -315,7 +315,25 @@
       </script> -->
 </head>
 <body>
-    <div id="navdiv"></div>
+    <header class="header" id="navdiv">
+        <div>
+            <a class="navbar-brand" href="#">LOGO</a>
+        </div>
+        <div class="links">
+            <ul>
+                <li>
+                  <a class="link-child" href="#"><i class="bi-person"></i><span class="link-off"> Login</span></a>
+                </li>
+                <li>
+                    <a class="link-child" href="#"><i class="bi-question-circle"></i><span class="link-off"> New To Shop</span></a>
+                </li>
+                <li>
+                    <a class="link-child" href="#"><i class="bi-cart3"></i><span class="link-off"> Cart</span></a>
+                </li>
+            </ul>
+        </div>
+
+    </header>
     <div id="outerdiv">
         <div id="firstwhole">
             <div id="wholelittlediv">
