--- a/closed-order-page.html
+++ b/closed-order-page.html
@@ -7,9 +7,10 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
         <link rel="stylesheet" href="css/closed-order.css">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     </head>
     <body>
         <header class="header">
@@ -72,20 +73,20 @@
                 <div class="col-lg-3 pt-2 turn-off">
 
                     <!-- aside nav-bar -->
-                    <div class="col-lg-12 bg-white shawdow">
-                        <a href="#" class="link">
+                    <div class="col-lg-12 bg-white shadow-sm">
+                        <a href="my-acct-page.html" class="link">
                             <div class="p-2 px-4 link-contain">
                                 My Account
                             </div>
                         </a>
                         <a href="#" class="link">
-                            <div class="p-2 px-4 link-contain">
-                                My Account
+                            <div class="p-2 px-4 link-contain link-contain-active">
+                                Orders
                             </div>
                         </a>
-                        <a href="#" class="link">
+                        <a href="wishlist.html" class="link">
                             <div class="p-2 px-4 link-contain">
-                                My Account
+                                Wish-List
                             </div>
                         </a>
                         <a href="#" class="link">
@@ -115,7 +116,7 @@
                 <div class="col-lg-9">
 
                     <!-- items card -->
-                    <div class="p-1 mt-2 bg-white shawdow">
+                    <div class="p-1 mt-2 bg-white shadow-sm">
 
                         <div class="row m-1">
                             <h5 class="">Orders</h5>
@@ -145,6 +146,9 @@
                                     </div>
                                     <div class="col-lg-2 col-md-3 see-detail-contain">
                                         <a href="" class="link"><p class="see-detail">SEE DETAILS</p></a>
+                                        <button class="feed-back" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                            <p class="m-0">FEEDBACK</p>
+                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -162,8 +166,12 @@
                                         <h5 class="">Hello</h5>
                                         <p class="">Buy here and there to be a winner</p>
                                     </div>
+
                                     <div class="col-lg-2 col-md-3 see-detail-contain">
                                         <a href="" class="link"><p class="see-detail">SEE DETAILS</p></a>
+                                        <button class="feed-back" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                            <p class="m-0">FEEDBACK</p>
+                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -171,6 +179,59 @@
                         <!-- /item -->
                     </div>
                     <!-- /items card -->
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                            <div class="modal-content">
+                                    <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">FeedBack</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="row">
+                                        <div class="col">
+                                            <label for="customRange2" class="form-label">Rating</label>
+                                            <input type="range" class="form-range" min="0" max="5" id="customRange2" value="4">
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <p class="p-2 m-1">Rating: <span id="rating-num">4</span></p>
+                                    </div>
+                                    <div class="row g-2">
+                                        <div class="col-md">
+                                            <div class="form-floating">
+                                                <input type="text" class="form-control" id="floatingInputGrid" placeholder="name@example.com" value="">
+                                                <label for="floatingInputGrid">Title</label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row mt-2">
+                                        <div class="col-sm">
+                                            <label for="formFile" class="form-label">Default file input example</label>
+                                            <input class="form-control" type="file" id="formFile">
+                                        </div> 
+                                        <div class="col-sm mt-2">
+                                            <label for="formFile" class="form-label"> </label>
+                                            <input class="form-control" type="file" id="formFile">
+                                        </div>                                            
+                                    </div>
+                                    <div class="row">
+                                        <div class="form-floating mt-2">
+                                            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 200px"></textarea>
+                                            <label for="floatingTextarea2">Comments</label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /Modal -->
+                                    
                 </div>
                 <!-- /items-card container -->
             </div>
@@ -180,6 +241,7 @@
 
         <div id="footer"></div>
         <script src="js/main.js"></script>
+        <script src="js/rater.js"></script>
         <script src="jquery/jqueryv3.4.1.js"></script>
     </body>
 </html>
