--- a/wishlist.html
+++ b/wishlist.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/order-page.css">
+        <link rel="stylesheet" href="css/wish-list.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     </head>
@@ -78,13 +78,13 @@
                                 My Account
                             </div>
                         </a>
-                        <a href="#" class="link">
-                            <div class="p-2 px-4 link-contain link-contain-active">
+                        <a href="open-order-page.html" class="link">
+                            <div class="p-2 px-4 link-contain">
                                 Orders
                             </div>
                         </a>
                         <a href="#" class="link">
-                            <div class="p-2 px-4 link-contain">
+                            <div class="p-2 px-4 link-contain  link-contain-active">
                                 Wish-List
                             </div>
                         </a>
@@ -118,19 +118,9 @@
                     <div class="p-1 mt-2 bg-white shadow-sm">
 
                         <div class="row m-1">
-                            <h5 class="">Orders</h5>
+                            <h5 class="m-0">Wish-List</h5>
                         </div>
                         <hr>
-
-                        <!-- navigator -->
-                        <div class="row m-1 my-2 px-2 mb-3 border-bottom">
-                            <div class="col-5 col-sm-3 col-md-2 p-2 order-switch">
-                                <a href="#" class="link switch-link">OPEN ORDERS</a>
-                            </div>
-                            <div class="col-5 col-sm-3 col-md-2 p-2 order-switch">
-                                <a href="closed-order-page.html" class="link switch-link not-active">CLOSED ORDERS</a>
-                            </div>
-                        </div>
 
                         <!-- item -->
                         <div class="row m-1 my-2 p-2 border">
@@ -144,7 +134,8 @@
                                         <p class="">Buy here and there to be a winner</p>
                                     </div>
                                     <div class="col-lg-2 col-md-3 see-detail-contain">
-                                        <a href="" class="link"><p class="see-detail">SEE DETAILS</p></a>
+                                        <button class="btn btn-custom btn-sm my-1" type="submit">Buy Now</button>
+                                        <a href="" class="link"><p class="see-detail">REMOVE</p></a>
                                     </div>
                                 </div>
                             </div>
@@ -163,7 +154,8 @@
                                         <p class="">Buy here and there to be a winner</p>
                                     </div>
                                     <div class="col-lg-2 col-md-3 see-detail-contain">
-                                        <a href="" class="link"><p class="see-detail">SEE DETAILS</p></a>
+                                        <button class="btn btn-custom btn-sm my-1" type="submit">Buy Now</button>
+                                        <a href="" class="link"><p class="see-detail">REMOVE</p></a>
                                     </div>
                                 </div>
                             </div>
