--- a/checkout-page.html
+++ b/checkout-page.html
@@ -87,13 +87,12 @@
                                 <div class="modal-dialog modal-dialog-centered">
                                     <div class="modal-content">
                                             <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                            <h5 class="modal-title" id="exampleModalLabel">Change</h5>
                                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                         </div>
                                         <div class="modal-body">
                                             ...
-                                            <p>Est enim non pariatur in.</p>
-                                            <p>Est enim non pariatur in.</p>
+                                            <p>Card form</p>
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -137,9 +136,9 @@
                 </div>
                 <div class="col-lg-4 p-4 pt-2">
                     <div class="col bg-white p-4 rounded">
-                        <p> .</p>
                         <p>. </p>
-                        <p> </p>
+                        <p>. </p>
+                        <p>. </p>
                         <p>. </p>
                         <p>. </p>
                         <p> .</p>
